--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="column right">
                     <div class="text">I'm <span>Bhavya</span> and I'm a <span>Frontend Develepor</span></div>
                     <p>I am a motivated and passionate individual with a strong desire to make a positive impact. With a background in computer science and a keen interest in technology, I possess a diverse set of skills that enable me to excel in various areas. My technical proficiency includes programming languages such as C++, DSA and HTML/CSS, allowing me to develop efficient and robust solutions.Beyond my professional pursuits, I value personal growth and prioritize holistic well-being. In my free time, you can often find me immersed in literature, as I have a deep love for reading and exploring diverse narratives. Engaging with different perspectives through books allows me to broaden my understanding of the world and cultivate empathy.</p>
-                    <a href="images/Bhavya's_Resume.pdf" download class="btn">Download CV</a>
+                    <a href="./images/Bhavya's_Resume.pdf" download class="btn">Download CV</a>
                 </div>
             </div>
         </div>
