--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="home-content">
                       <div class="text-1">Hello Myself</div>
                       <div class="text-2">Gandham Bhavya Naga Bhargavi</div>
-                      <div class="text-3">And I'm a <span>Frontend Developer</span></div>
+                      <div class="text-3">And I'm a <span>Full Stack Developer</span></div>
             </div>
         </div>
     </section>
@@ -51,12 +51,12 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/pic2.jpg" alt="">
+                    <img src="images/pic2.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm <span>Bhavya</span> and I'm a <span>Frontend Develepor</span></div>
-                    <p>I am a motivated and passionate individual with a strong desire to make a positive impact. With a background in computer science and a keen interest in technology, I possess a diverse set of skills that enable me to excel in various areas. My technical proficiency includes programming languages such as C++, DSA and HTML/CSS, allowing me to develop efficient and robust solutions.Beyond my professional pursuits, I value personal growth and prioritize holistic well-being. In my free time, you can often find me immersed in literature, as I have a deep love for reading and exploring diverse narratives. Engaging with different perspectives through books allows me to broaden my understanding of the world and cultivate empathy.</p>
-                    <a href="./images/Bhavya's_Resume.pdf" download class="btn">Download CV</a>
+                    <div class="text">I'm <span>Bhavya</span> and I'm a <span>Full Stack Develepor</span></div>
+                    <p>I am a motivated and passionate individual with a strong desire to make a positive impact. With a background in computer science and a keen interest in technology, I possess a diverse set of skills that enable me to excel in various areas. My technical proficiency includes programming languages such as C++, DSA and HTML, CSS, Js, ReactJS, NodeJs allowing me to develop efficient and robust solutions.Beyond my professional pursuits, I value personal growth and prioritize holistic well-being. In my free time, you can often find me immersed in literature, as I have a deep love for reading and exploring diverse narratives. Engaging with different perspectives through books allows me to broaden my understanding of the world and cultivate empathy.</p>
+                    <a href="images/Bhavya's_Resume.pdf" download class="btn">Download CV</a>
                 </div>
             </div>
         </div>
@@ -69,23 +69,23 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">DSA</div>
+                        <p>I have a solid understanding of data structures and algorithms, particularly in C++. I've tackled complex problems.My ability to apply DSA concepts in problem-solving reflects my proficiency in these areas.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>With the increasing use of mobile devices, it's essential to have a website that adapts to different screen sizes. I will design your website using responsive techniques, ensuring that it looks and functions flawlessly on desktops, tablets, and smartphones.</p>
+                        <div class="text">Web Development</div>
+                        <p>Proficient in HTML, CSS, and Js, with a strong foundation in building responsive and interactive user interfaces. Experienced in using ReactJS to create dynamic, component-driven applications. Skilled in Node.js and Express.js for building robust server-side applications.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-bug"></i>
-                        <div class="text">Debugging</div>
-                        <p>Software bugs can be frustrating and disruptive, affecting the performance, functionality, and user experience of your applications. As a debugger, I specialize in diagnosing and fixing software bugs efficiently and effectively, enabling you to maintain a smooth and error-free operation.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Coding</div>
-                        <p>In today's technology-driven world, efficient and high-quality coding is crucial for building robust and scalable applications. As a coder, I specialize in writing clean, well-structured, and maintainable code across various programming languages and frameworks.</p>
+                        <div class="text">Competitive Programming</div>
+                        <p>I have an ability to quickly analyze problem statements, devise optimal solutions, and implement them under time constraints.I am committed to refining my competitive programming skills by regularly participating in contests and solving challenges.</p>
                     </div>
                 </div>
                </div>
@@ -116,21 +116,21 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>60%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>80%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>DSA</span>
-                            <span>50%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line dsa"></div>
                     </div>
@@ -153,18 +153,21 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-home"></i>
-                        <div class="text">PG Life</div>
-                        <p>The PG Life website project is a web application designed to simplify the process of finding and managing paying guest accommodations. It aims to provide a user-friendly platform for both tenants and property owners to interact and facilitate smooth transactions.
+                        <i class="fas fa-solid fa-book"></i>
+                        <div class="text">Blog App</div>
+                        <p>The Blog Application is a comprehensive platform for users to create, manage, and interact with blog posts. It
+                            includes functionalities enabling users to register and log in, as well as the ability to
+                            create, update, delete, and view blogs.
                         </p>
-                        <div class="text1"><span>Skills: HTML,CSS,JS,PHP</span></div>
+                        <div class="text1"><span>Skills: React,Node,Express,MongoDB</span></div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-calculator"></i>
-                        <div class="text">Simple Calculator</div>
-                        <p>The calculator project aims to create a simple web-based calculator that performs basic arithmetic operations such as addition, subtraction, multiplication, and division.</p>
+                        <i class="fas fa-solid fa-file-word"></i>
+                        <div class="text">Word Scramble</div>
+                        <p>The Word Scramble Project is an engaging and educational game that challenges players to unscramble letters
+                            to form valid words.This project includes features like providing hints and a timer for guessing.</p>
                         <div class="text1"><span>Skills: HTML,CSS,JS</span></div>
                     </div>
                 </div>
@@ -191,29 +194,29 @@
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
-                                <div class="head">Name</div>
+                                <!-- <div class="head">Name</div> -->
                                 <div class="sub-title">Bhavya Gandham</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-phone-alt"></i>
                             <div class="info">
-                                <div class="head">Phone number</div>
-                                <div class="sub-title">9367288125</div>
+                                <!-- <div class="head">Phone number</div> -->
+                                <div class="sub-title">8919497657</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
-                                <div class="head">Address</div>
+                                <!-- <div class="head">Address</div> -->
                                 <div class="sub-title">Andhra Pradesh</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
-                                <div class="head">Email</div>
-                                <div class="sub-title">bhavya@gmail.com</div>
+                                <!-- <div class="head">Email</div> -->
+                                <div class="sub-title">bhavyagandham564@gmail.com</div>
                             </div>
                         </div>
                     </div>
