--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
     <!-- footer -->
     <footer>
-        <span>Created By <a href="https://internship.codeclause.com/">CodeClause</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
+        <span>Created By <a href="https://nitrr.ac.in/">NITRR</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
